--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "echarts": "^6.0.0",
     "element-plus": "^2.11.7",
+    "lib-flexible": "^0.3.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "sass": "^1.93.3",
